--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@emotion/styled": "^11.11.0",
     "carbon-components": "^10.58.8",
     "carbon-icons": "^7.0.7",
+    "firebase": "^10.1.0",
     "framer-motion": "^10.15.0",
     "next": "13.4.12",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.1.1"
   }
 }
