--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-firebase-hooks": "^5.1.1"
+    "react-firebase-hooks": "^5.1.1",
+    "sweetalert2": "^11.7.22"
   }
 }
